# mix-simulator

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yaml
example-programs/: maximum.mix  primes.mix
mix_simulator/: assembler.py  byte.py  character_code.py  comparison_indicator.py  grammar.py  instruction.py  memory.py  opcode.py  operator.py  register.py  simulator.py  word.py
tests/: test_assembler.py  test_byte.py  test_grammar.py  test_instruction.py  test_operator.py  test_register.py  test_word.py
tests/instructions/: test_add.py  test_compare.py  test_conversion.py  test_div.py  test_enter.py  test_increment.py  test_instruction.py  test_jump.py  test_load.py  test_move.py  test_mul.py  test_shift.py  test_store.py  test_sub.py
tests/programs/: test_maximum.py  test_primes.py
