[project]
name = "mix-simulator"
version = "0.1.0"
description = "A simulator to run programs written for the MIX computer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mixsim = "mix_simulator.simulator:run"

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov=mix_simulator --cov-report=term-missing"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "parameterized>=0.9.0",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.8.5",
]
